@@ -9,6 +9,8 @@ version 0.8.0 - Not released, available at https://svn.sourceforge.net/svnroot/s
   - NEW: add subPops parameter to intializers, working the same as subPop
   - NEW: extending pyIndOperator with handling of loci and infoFields
   - BUG: fix a crash of postOps in dryrun mode by applying operator in the order given.
+  - BUG: fix scripts/simuViewPop.py
+
 
 version 0.7.10 - (Rev 987) May 20, 2007
   - BUG: fix a memory leak bug with LoadPopulation
